2010-05-19  Zhenyao Mo  <zmo@google.com>

        Reviewed by Darin Adler.

        fast/canvas/webgl/texture-npot.html failed on leopard bot
        https://bugs.webkit.org/show_bug.cgi?id=39128

        * fast/canvas/webgl/texture-npot-expected.txt: Skip pixel (0, 0); print out actual color when failing.
        * fast/canvas/webgl/texture-npot.html: Ditto.

2010-05-19  Ben Murdoch  <benm@google.com>

        Reviewed by Darin Adler.

        Touch events are marked DontEnum in DOMWindow.idl
        https://bugs.webkit.org/show_bug.cgi?id=39118

        Update the expected results for enumerating the window object
        properties now touch event listeners are no longer marked DontEnum.

        * platform/qt/fast/dom/Window/window-properties-expected.txt:

2010-05-18  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Shinichiro Hamaji.

        Make CSS Parser properly handle only-for-pages pseudo-classes.

        https://bugs.webkit.org/show_bug.cgi?id=38731

        * fast/css/misplaced-paged-media-pseudo-expected.txt: Removed.
        * fast/css/misplaced-paged-media-pseudo.html: Removed.
        * printing/page-rule-css-text-expected.txt:
        * printing/page-rule-css-text.html:
        * printing/pseudo-class-outside-page-expected.txt:
        * printing/pseudo-class-outside-page.html:

2010-05-18  Alejandro G. Castro  <alex@igalia.com>

        Unreviewed, skip test.

        Skipping fast/workers/storage
        https://bugs.webkit.org/show_bug.cgi?id=39346

        * platform/gtk/Skipped:

2010-05-18  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.

        Simplified handling of 'arguments' -- 1.2% SunSpider speedup
        https://bugs.webkit.org/show_bug.cgi?id=39200

        * fast/js/function-dot-arguments-expected.txt:
        * fast/js/script-tests/function-dot-arguments.js:
        (argumentsIdentity): Updated to match new behavior.

        * fast/js/function-dot-arguments2-expected.txt: