@@ -1,3 +1,15 @@
+2010-05-19  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r59758.
+        http://trac.webkit.org/changeset/59758
+        https://bugs.webkit.org/show_bug.cgi?id=39361
+
+        This patch adds a test that fails on Leopard (Requested by
+        abarth on #webkit).
+
+        * fast/canvas/webgl/texture-npot-expected.txt:
+        * fast/canvas/webgl/texture-npot.html:
+
 2010-05-19  Zhenyao Mo  <zmo@google.com>
 
         Reviewed by Darin Adler.
